add date range filtering for appointments and include new branding assets